[project]
name = "puget"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "ollama>=0.6.1",
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.3",
]

[project.scripts]
puget = "puget.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.11.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.26",
]
